@@ -25,6 +25,11 @@ RELEASE X.X.X - XXX
       file foo.tex. The builder now ignores a directory and continues
       searching to find the correct file. Thanks to Lennart Sauerbeck
       for the test case and initial patch
+      
+      Also allow the \include of files in subdirectories when variantDir
+      is used with duplicate=0. Previously latex would crash since 
+      the directory in which the .aux file is written was not created.
+      Thanks to Stefan Hepp for finding this and part of the solution.
 
 
 RELEASE 1.2.0.d20100117 - Sun, 17 Jan 2010 14:26:59 -0800  
